--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,9 +13,9 @@
 <ul>
 <li><a href="/">Home</a></li>
 <li><a href="cohortexEditor.html">CohortEx Param. Editor</a></li>
-<li><a href="/about">About</a></li>
-<li><a href="/cv">CV</a></li>
-<li><a href="/blog">Blog</a></li>
+<li><a href="/docs/about">About</a></li>
+<li><a href="/docs/cv">CV</a></li>
+<li><a href="/docs/blog">Blog</a></li>
 </ul>
     </nav>
 <div class="container">
