--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <title>{{ page.title }}</title>
     
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
   
   </head>
 
@@ -13,9 +13,9 @@
 <ul>
 <li><a href="/">Home</a></li>
 <li><a href="cohortexEditor.html">CohortEx Param. Editor</a></li>
-<li><a href="about">About</a></li>
-<li><a href="cv">CV</a></li>
-<li><a href="blog">Blog</a></li>
+<li><a href="{{ site.baseurl }}/about">About</a></li>
+<li><a href="{{ site.baseurl }}/cv">CV</a></li>
+<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
 </ul>
     </nav>
 <div class="container">
