--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -11,7 +11,7 @@
   <body>
     <nav>
 <ul>
-<li><a href="/">Home</a></li>
+<li><a href="{{ site.baseurl }}/">Home</a></li>
 <li><a href="cohortexEditor.html">CohortEx Param. Editor</a></li>
 <li><a href="{{ site.baseurl }}/about">About</a></li>
 <li><a href="{{ site.baseurl }}/cv">CV</a></li>
