--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -4,7 +4,7 @@ layout: cohortex_default
 
 <div class="container">
 	<div class="hero-unit">
-		<img src="img/logo-largeCohortEx.png" title="CohortEx Logo" width="150" height="150" class="pull-left" />
+		<img src="{{ site.baseurl }}/img/logo-largeCohortEx.png" title="CohortEx Logo" width="150" height="150" class="pull-left" />
 		<h1>CohortEx Parameters Editor</h1>
 		<h3>A parameters file editor for CohortEx: cohort extractor tool</h3>
 		<p>
@@ -24,7 +24,7 @@ layout: cohortex_default
 				Define the cohort parameters to extract and analyze patients from a Paua model.
 			</p>
 			<p>
-				<a href="/about.html#GitHub" class="btn">Learn more &gt;</a>
+				<a href="{{ site.baseurl }}/about.html#GitHub" class="btn">Learn more &gt;</a>
 			</p>
 		</div>
 	</div>
