--- a/docs/_layouts/cohortex_default.html
+++ b/docs/_layouts/cohortex_default.html
@@ -49,7 +49,7 @@
 					<ul class="nav">
 						<li><a href="{{ site.baseurl }}/">Home</a></li>
 						<li><a href="{{ site.baseurl }}/cms">CohortEx Repositories</a></li>
-						<li><a href="{{ site.baseurl }}/about.html">About</a></li>
+						<li><a href="{{ site.baseurl }}/cohortex_about.html">About</a></li>
 						<li><a href="{{ site.baseurl }}/documentation/">Documentation</a></li>
 					</ul>
 				</div>
