--- a/docs/_layouts/cohortex_default.html
+++ b/docs/_layouts/cohortex_default.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap-responsive.min.css" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/dataTables.bootstrap.css" />
-		{% for style in page.styles %}<link rel="stylesheet" href="{{ site.baseurl }}{{ style }}" />{% endfor %} 
+		{% for style in page.styles %}<link rel="stylesheet" href="{{ style }}" />{% endfor %} 
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/app.css" />
 		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
