--- a/docs/_layouts/study.html
+++ b/docs/_layouts/study.html
@@ -2,6 +2,14 @@
 layout: default
 ---
 
+<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/js/JSONVisualization/default.css">
+
+<script type="text/javascript" src="{{ site.baseurl }}/js/JSONVisualization/yuiloader-dom-event.js"></script>
+
+<!-- script type="text/javascript" src="{{ site.baseurl }}/js/JSONVisualization/json-min.js"></script -->
+
+<script type="text/javascript" src="{{ site.baseurl }}/js/JSONVisualization/default.js"></script>
+
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -19,7 +27,28 @@ layout: default
 	<div class="content">
 		{{ content }}
 	</div>
-    <span class="meta">
+	<div style="padding-left: 13em;">
+		<h2 style="margin-top: 0px; font-size: 108%;">
+			<label for="jsonInput">Input:</label>
+			<small id="jsonSize"></small>
+		</h2>
+		<textarea id="jsonInput"
+			rows="10" cols="50"
+			placeholder="Paste your JSON here"
+			spellcheck="false"
+			autofocus="autofocus">{{ content }}</textarea>
+
+		<h2 style="font-size: 108%;">Output:</h2>
+		<output
+			style="display: block;"
+			for="jsonInput cmdValidate"
+			id="jsonValidateOutput"></output>
+		<output
+			style="display: block;"
+			for="jsonInput jsonStrict jsonEval json2HTML json2JSON jsonTrunc jsonDate jsonData jsonSpace"
+			id="jsonOutput"></output>
+	</div>
+   <span class="meta">
     	<small>By {{ site.author }} &copy; {{page.date | date: "%Y"}}</small>
     </span>
 </div>
@@ -28,3 +57,18 @@ layout: default
     <h4>Comments</h4>
     <div class="fb-comments" data-href="{{site.url}}{{page.url}}" data-width="470" data-num-posts="2"></div>
 </div>
+<script type="text/javascript" >
+    VIS.data.outHTML.checked=true;
+    VIS.data.inStrict.checked=true;
+    VIS.data.preserve.checked=true;
+    VIS.data.dates.checked=true;
+    VIS.data.dataTables.checked=true;
+    VIS.data.trunc.checked=true;
+    VIS.data.outHTML.checked=true;
+    VIS.data.size.innerHTML="";
+		
+    var input= {{ content }};
+    var jsonRendered = HTML.display(input,0);
+    $("jsonOutput").innerHTML=jsonRendered;
+    
+	</script>
