--- a/docs/_layouts/study.html
+++ b/docs/_layouts/study.html
@@ -67,67 +67,8 @@ layout: default
     VIS.data.outHTML.checked=true;
     VIS.data.size.innerHTML="";
 		
-	var input= {
-	“Research and Study Identification”: {
-		“research_id”: “DCV”,
-		“res_description”: “DCV research on Incor patient database”,
-		“study_id”: “Statins”,
-		“study_description”: “A study of statins influence on DCV”,
-		“summary”: “Um estudo das estatinas para testar o CohortEx no celular.”,
-		“published”: false,
-		“keywords”: [
-			{
-				“keyword”: “DCV”
-			},
-			{
-				“keyword”: “Statins”
-			},
-			{
-				“keyword”: “Heart diseases”
-			},
-			{
-				“keyword”: “test”
-			}
-		]
-	},
-	“Enrollment”: {
-		“initialDate”: “”,
-		“endDate”: “”
-	},
-	“studyInterval”: {
-		“initialDate”: “2008-01-01”,
-		“endDate”: “2013-01-01”
-	},
-	“personDemographics”: {
-		“minAge”: 21,
-		“maxAge”: 100,
-		“gender”: [
-			“Male”,
-			“Female”
-		],
-		“disableGenderFilters”: []
-	},
-	“cohortSelection”: {
-		“diagnosisSelection”: [
-			{
-				“ICD0_category”: “ICD10_CATEGORY_PARTIAL”,
-				“code”: “I21”,
-				“exclusion”: false
-			},
-			{
-				“ICD0_category”: “ICD10_CATEGORY_PARTIAL”,
-				“code”: “I25”,
-				“exclusion”: false
-			}
-		],
-		“surgeriesSelection”: {
-			“surgeriesFilter”: “%REVASC%”,
-			“disableSurgeryFilter”: []
-		}
-	}
-}
-
-;
+    var input= JSON.parse('{{ content | strip_html }}');
+	
     var jsonRendered = HTML.display(input,0);
     $("jsonOutput").innerHTML=jsonRendered;
     
