- Need of son-min

--- a/docs/_layouts/study.html
+++ b/docs/_layouts/study.html
@@ -6,7 +6,7 @@ layout: default
 
 <script type="text/javascript" src="{{ site.baseurl }}/js/JSONVisualization/yuiloader-dom-event.js"></script>
 
-<!-- script type="text/javascript" src="{{ site.baseurl }}/js/JSONVisualization/json-min.js"></script -->
+<script type="text/javascript" src="{{ site.baseurl }}/js/JSONVisualization/json-min.js"></script>
 
 <script type="text/javascript" src="{{ site.baseurl }}/js/JSONVisualization/default.js"></script>
 
