--- a/docs/_layouts/study.html
+++ b/docs/_layouts/study.html
@@ -25,10 +25,8 @@ layout: default
     </em>
     <hr class="large" />
 	<div class="content">
-		{{ content }}
-	</div>
 	<div style="padding-left: 13em;">
-		<h2 style="margin-top: 0px; font-size: 108%;">
+		<!-- h2 style="margin-top: 0px; font-size: 108%;">
 			<label for="jsonInput">Input:</label>
 			<small id="jsonSize"></small>
 		</h2>
@@ -36,7 +34,7 @@ layout: default
 			rows="10" cols="50"
 			placeholder="Paste your JSON here"
 			spellcheck="false"
-			autofocus="autofocus">{{ content | strip_html }}</textarea>
+			autofocus="autofocus">{{ content | strip_html }}</textarea -->
 
 		<h2 style="font-size: 108%;">Output:</h2>
 		<output
@@ -47,6 +45,7 @@ layout: default
 			style="display: block;"
 			for="jsonInput jsonStrict jsonEval json2HTML json2JSON jsonTrunc jsonDate jsonData jsonSpace"
 			id="jsonOutput"></output>
+	</div>
 	</div>
    <span class="meta">
     	<small>By {{ site.author }} &copy; {{page.date | date: "%Y"}}</small>
