--- a/docs/_layouts/study.html
+++ b/docs/_layouts/study.html
@@ -36,7 +36,7 @@ layout: default
 			spellcheck="false"
 			autofocus="autofocus">{{ content | strip_html }}</textarea -->
 
-		<h2 style="font-size: 108%;">Output:</h2>
+		<h2 style="font-size: 108%;">Study parameters:</h2>
 		<output
 			style="display: block;"
 			for="jsonInput cmdValidate"
@@ -45,7 +45,7 @@ layout: default
 			style="display: block;"
 			for="jsonInput jsonStrict jsonEval json2HTML json2JSON jsonTrunc jsonDate jsonData jsonSpace"
 			id="jsonOutput"></output>
-	</div>
+	</div><br/>
 	</div>
    <span class="meta">
     	<small>By {{ site.author }} &copy; {{page.date | date: "%Y"}}</small>
