--- a/docs/js/JSONVisualization/default.css
+++ b/docs/js/JSONVisualization/default.css
@@ -1,6 +1,6 @@
 
 
-table            { color: #FCFFF5; background-color: #193441; }
+table            { width: 80%; color: #FCFFF5; background-color: #193441; }
 table 			{ margin-bottom: 0; }
 th, td  		{ border: 1px solid #D1DBBD; vertical-align: top; }
 .ERR             { color: #FF0000; font-weight: bold; }
