--- a/docs/js/JSONVisualization/default.css
+++ b/docs/js/JSONVisualization/default.css
@@ -1,8 +1,12 @@
 
 
-table            { width: 80%; color: #FCFFF5; background-color: #193441; }
+element.style {
+    /* padding-left: 13em; */
+}
+
+table            { width: 100%; color: #FCFFF5; background-color: #193441; }
 table 			{ margin-bottom: 0; }
-th, td  		{ border: 1px solid #D1DBBD; vertical-align: top; }
+th, td  		{ border: 1px solid #D1DBBD; vertical-align: top; text-align: left;}
 .ERR             { color: #FF0000; font-weight: bold; }
 .FUNC            { color: #FF0000; font-weight: bold; }
 .IDK             { color: #FF0000; font-weight: bold; }
