--- a/docs/js/JSONVisualization/default.css
+++ b/docs/js/JSONVisualization/default.css
@@ -1,7 +1,7 @@
 
 
 element.style {
-    /* padding-left: 13em; */
+    padding-left: 5em; 
 }
 
 table            { width: 100%; color: #FCFFF5; background-color: #193441; }
