- Tests with schemas

--- a/docs/_layouts/study.html
+++ b/docs/_layouts/study.html
@@ -21,6 +21,7 @@ layout: default
 <div class="post">
     <h1>{{ page.title }} - {{ page.description }}</h1>
 	<h3>{{ page.summary }}</h3>
+	<h3> Based on {{ page.schema }} </h3>
     <em>
     	Posted on <span class="date">{{ page.date | date_to_string }}</span> by <span class="author">{{ page.description }}</span>
     </em>
