--- a/docs/_layouts/study.html
+++ b/docs/_layouts/study.html
@@ -21,7 +21,6 @@ layout: default
 <div class="post">
     <h1>{{ page.title }} - {{ page.description }}</h1>
 	<h3>{{ page.summary }}</h3>
-	<h2 style="font-size: 108%;"> Based on {{ page.schema }} </h2>
     <em>
     	Posted on <span class="date">{{ page.date | date_to_string }}</span> by <span class="author">{{ page.description }}</span>
     </em>
@@ -37,7 +36,11 @@ layout: default
 			placeholder="Paste your JSON here"
 			spellcheck="false"
 			autofocus="autofocus">{{ content | strip_html }}</textarea -->
-
+		
+		<h2 style="font-size: 108%;"> Parameters Schema: {{ page.schema }} </h2>
+		<script src="http://lbovet.github.io/docson/widget.js" 
+			data-schema="/schemas/{{ page.schema }}.json">      
+		</script>
 		<h2 style="font-size: 108%;">Study parameters:</h2>
 		<output
 			style="display: block;"
