--- a/docs/_layouts/study.html
+++ b/docs/_layouts/study.html
@@ -37,10 +37,6 @@ layout: default
 			spellcheck="false"
 			autofocus="autofocus">{{ content | strip_html }}</textarea -->
 		
-		<h2 style="font-size: 108%;"> Parameters Schema: {{ page.schema }} </h2>
-		<script src="{{ site.baseurl }}/widget.js" 
-			data-schema="{{ site.baseurl }}/schemas/{{ page.schema }}.json">      
-		</script>
 		<h2 style="font-size: 108%;">Study parameters:</h2>
 		<output
 			style="display: block;"
@@ -50,7 +46,32 @@ layout: default
 			style="display: block;"
 			for="jsonInput jsonStrict jsonEval json2HTML json2JSON jsonTrunc jsonDate jsonData jsonSpace"
 			id="jsonOutput"></output>
-	</div><br/>
+	</div>
+	<br/>
+	<h2 style="font-size: 108%;"> Parameters Schema: {{ page.schema }} </h2>
+	<script type="text/javascript" >    
+		data-schema="{{ site.baseurl }}/schemas/{{ page.schema }}.json";
+		docson = "{{ site.baseurl }}/docson_frame.html;
+		document.write("<iframe id='" + data-schema +
+			"' style='padding: 0; border: 0; width:100%; background: transparent' src='" +
+			docson + "#" + data-schema + "'></iframe>");
+		function receiveMessage(event) {
+			console.log("<", event)
+			if (event.data.id && event.data.id == "docson") {
+			  var frame = document.getElementById(event.data.url);
+			  if(event.data.action == "resized") {
+				frame.height = event.data.height + 18;
+			  }
+			  if(event.data.action == "ready") {
+				console.log(frame.parentNode)
+				frame.contentWindow.postMessage({ id: "docson", font: window.getComputedStyle(frame.parentNode).fontFamily}, "*");
+			  }
+			}
+
+		}
+		window.addEventListener("message", receiveMessage, false);
+	</script>
+	<br/>
 	</div>
    <span class="meta">
     	<small>By {{ site.author }} &copy; {{page.date | date: "%Y"}}</small>
