--- a/docs/_layouts/study.html
+++ b/docs/_layouts/study.html
@@ -50,11 +50,11 @@ layout: default
 	<br/>
 	<h2 style="font-size: 108%;"> Parameters Schema: {{ page.schema }} </h2>
 	<script type="text/javascript" >    
-		var data-schema="{{ site.baseurl }}/schemas/{{ page.schema }}.json";
-		var docson = "{{ site.baseurl }}/docson_frame.html";
-		document.write("<iframe id='" + data-schema +
+		var dataSchema="{{ site.baseurl }}/schemas/{{ page.schema }}.json";
+		var docsonFrame = "{{ site.baseurl }}/docson_frame.html";
+		document.write("<iframe id='" + dataSchema +
 			"' style='padding: 0; border: 0; width:100%; background: transparent' src='" +
-			docson + "#" + data-schema + "'></iframe>");
+			docsonFrame + "#" + dataSchema + "'></iframe>");
 		function receiveMessage(event) {
 			console.log("<", event)
 			if (event.data.id && event.data.id == "docson") {
