--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
 <li><a href="cohortexEditor.html">CohortEx Param. Editor</a></li>
 <li><a href="{{ site.baseurl }}/about">About</a></li>
 <li><a href="{{ site.baseurl }}/cv">CV</a></li>
-<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
+<li><a href="{{ site.baseurl }}/blog">Posts and Studies</a></li>
 </ul>
     </nav>
 <div class="container">
