--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
-<html>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">  
+<html lang="en">
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="CohortEx">
     <title>{{ page.title }}</title>
     
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/email.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/fork.css">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
-  
+    <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
   </head>
 
 
   <body>
+     <div class="github-fork-ribbon-wrapper right">
+        <div class="github-fork-ribbon">
+            <a href="{{ site.url }}{{ site.base }}">Fork us on GitHub</a>
+        </div>
+    </div>
     <nav>
 <ul>
 <li><a href="{{ site.baseurl }}/">Home</a></li>
-<li><a href="cohortexEditor.html">CohortEx Param. Editor</a></li>
+<li><a href="{{ site.baseurl }}/cohortexEditor.html">CohortEx Param. Editor</a></li>
 <li><a href="{{ site.baseurl }}/about">About</a></li>
 <li><a href="{{ site.baseurl }}/cv">CV</a></li>
 <li><a href="{{ site.baseurl }}/blog">Posts and Studies</a></li>
