--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/email.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/fork.css">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
+    <!-- link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css" -->
     <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
   </head>
 
@@ -24,13 +24,13 @@
         <div class="sidebar pure-u">
             <header class="header">
                 <hgroup>
-                    <h1 class="brand-title">Code Hunks</h1>
-                    <h2 class="brand-tagline">Coding Prodigies</h2>
-                </hgroup><br><br>
+                    <h1 class="brand-title">CohortEx</h1>
+                    <h2 class="brand-tagline">Cohort Extractor</h2>
+                </hgroup>
                 <nav class="nav">
                     <ul class="nav-list">      
                       <li><a href="{{ site.baseurl }}/">Home</a></li>
-                      <li><a href="{{ site.baseurl }}/cohortexEditor.html">CohortEx Param. Editor</a></li>
+                      <li><a href="{{ site.baseurl }}/cohortexEditor.html">CohortEx Parameters Editor</a></li>
                       <li><a href="{{ site.baseurl }}/about">About</a></li>
                       <li><a href="{{ site.baseurl }}/cv">CV</a></li>
                       <li><a href="{{ site.baseurl }}/blog">Posts and Studies</a></li>
