--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,7 +26,7 @@
                 <hgroup>
                     <h1 class="brand-title">CohortEx</h1>
                     <h2 class="brand-tagline">Cohort Extractor</h2>
-                </hgroup>
+                </hgroup><br><br>
                 <nav class="nav">
                     <ul class="nav-list">      
                       <li><a href="{{ site.baseurl }}/">Home</a></li>
