--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,11 +6,12 @@
     <meta name="description" content="CohortEx">
     <title>{{ page.title }}</title>
     
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css">
+    <!-- link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" -->
     <link rel="stylesheet" href="{{ site.baseurl }}/css/email.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/fork.css">
     <!-- link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css" -->
-    <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
   </head>
 
 
