--- a/docs/_layouts/study.html
+++ b/docs/_layouts/study.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: cohortex_default
 ---
 
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/js/JSONVisualization/default.css">
@@ -26,7 +26,7 @@ layout: default
     </em>
     <hr class="large" />
 	<div class="content">
-	<div style="padding-left: 1em;">
+	<div style="padding-left: 8em;">
 		<!-- h2 style="margin-top: 0px; font-size: 108%;">
 			<label for="jsonInput">Input:</label>
 			<small id="jsonSize"></small>
@@ -46,32 +46,32 @@ layout: default
 			style="display: block;"
 			for="jsonInput jsonStrict jsonEval json2HTML json2JSON jsonTrunc jsonDate jsonData jsonSpace"
 			id="jsonOutput"></output>
-	</div>
-	<br/>
-	<h2 style="font-size: 108%;"> Parameters Schema: {{ page.schema }} </h2>
-	<script type="text/javascript" >    
-		var dataSchema="{{ site.baseurl }}/schemas/{{ page.schema }}.json";
-		var docsonFrame = "{{ site.baseurl }}/docson_frame.html";
-		document.write("<iframe id='" + dataSchema +
-			"' style='padding: 0; border: 0; width:100%; background: transparent' src='" +
-			docsonFrame + "#" + dataSchema + "'></iframe>");
-		function receiveMessage(event) {
-			console.log("<", event)
-			if (event.data.id && event.data.id == "docson") {
-			  var frame = document.getElementById(event.data.url);
-			  if(event.data.action == "resized") {
-				frame.height = event.data.height + 18;
-			  }
-			  if(event.data.action == "ready") {
-				console.log(frame.parentNode)
-				frame.contentWindow.postMessage({ id: "docson", font: window.getComputedStyle(frame.parentNode).fontFamily}, "*");
-			  }
-			}
+        <br/>
+        <h2 style="font-size: 108%;"> Parameters Schema: {{ page.schema }} </h2>
+        <script type="text/javascript" >    
+            var dataSchema="{{ site.baseurl }}/schemas/{{ page.schema }}.json";
+            var docsonFrame = "{{ site.baseurl }}/docson_frame.html";
+            document.write("<iframe id='" + dataSchema +
+                "' style='padding: 0; border: 0; width:100%; background: transparent' src='" +
+                docsonFrame + "#" + dataSchema + "'></iframe>");
+            function receiveMessage(event) {
+                console.log("<", event)
+                if (event.data.id && event.data.id == "docson") {
+                  var frame = document.getElementById(event.data.url);
+                  if(event.data.action == "resized") {
+                    frame.height = event.data.height + 18;
+                  }
+                  if(event.data.action == "ready") {
+                    console.log(frame.parentNode)
+                    frame.contentWindow.postMessage({ id: "docson", font: window.getComputedStyle(frame.parentNode).fontFamily}, "*");
+                  }
+                }
 
-		}
-		window.addEventListener("message", receiveMessage, false);
-	</script>
-	<br/>
+            }
+            window.addEventListener("message", receiveMessage, false);
+        </script>
+        <br/>
+    </div>
 	</div>
    <span class="meta">
     	<small>By {{ site.author }} &copy; {{page.date | date: "%Y"}}</small>
