--- a/docs/_layouts/cohortex_default.html
+++ b/docs/_layouts/cohortex_default.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+        <base href='{{site.url}}{{ site.baseurl }}'/>
 		<title>{% if page.title %} {{ page.title }} | {% endif %} {{site.name}} - {{site.description}}</title>
 		<meta name="description" content="{{page.description}}" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
