- Rename to avoid confusion

--- a/docs/_layouts/study.html
+++ b/docs/_layouts/study.html
@@ -1,5 +1,5 @@
 ---
-layout: cohortex
+layout: cohortexFields
 ---
 
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/js/JSONVisualization/default.css">
