--- a/docs/templates/cms.html
+++ b/docs/templates/cms.html
@@ -43,8 +43,8 @@
 <script id="template" type="text/html">
 	<li>
 		<h5>{{ name }}</h5>
-		<a href="{{ site.baseurl }}/cms/edit.html?editor=text#{{ path }}" class="btn">Edit Template</a>
-		<a href="{{ site.baseurl }}{{ editorurl }}" class="btn">Edit Dialog</a>
+		<a href="{{ templateurl }}" class="btn">Edit Template</a>
+		<a href="{{ editorurl }}" class="btn">Edit Dialog</a>
 	</li>
 </script>
 <script id="history-item" type="text/html">
