--- a/docs/_layouts/cohortex_default.html
+++ b/docs/_layouts/cohortex_default.html
@@ -67,7 +67,7 @@
 				<p>CohortEx Parameters Editor: Based on <a href="StevensonCMS">StevensonCMS</a> from <a href="https://www.danklco.com/">Daniel Klco</a>- Apache License 2.0</p>
 			</footer>
 		</div>
-		{% include login.html %}
-		{% include loader.html %}
+		{% include stevLogin.html %}
+		{% include stevLoader.html %}
 	</body>
 </html>
