- Last change went well with docson now all in a separate folder :D - Try to get back the menu bar for a study post

--- a/docs/_layouts/cohortexStudy.html
+++ b/docs/_layouts/cohortexStudy.html
@@ -1,3 +1,7 @@
+---
+layout: stevDefault
+title: Study Page
+---
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stevJs/JSONVisualization/default.css">
 
 <script type="text/javascript" src="{{ site.baseurl }}/stevJs/JSONVisualization/yuiloader-dom-event.js"></script>
