- Solve problems, generate as markdown

--- a/docs/_layouts/cohortexStudy.html
+++ b/docs/_layouts/cohortexStudy.html
@@ -94,8 +94,8 @@ title: Study Page
 		
     //var input= {{ content | strip_html }}; //JSON.parse('');
 	var input;
-    var studyURL = "https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/studies/{{ page.studyPath }}";
-    $.getJSON(my_url, function(json) {
+    var studyURL = "https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/{{ page.studyPath }}";
+    $.getJSON(studyURL, function(json) {
       input = json;
     });
     var jsonRendered = HTML.display(input,0);
