--- a/docs/_layouts/cohortexStudy.html
+++ b/docs/_layouts/cohortexStudy.html
@@ -1,14 +1,25 @@
 ---
 layout: stevDefault
 title: Study Page
+scripts: [/stevJs/JSONVisualization/yuiloader-dom-event.js, /stevJs/JSONVisualization/json-min.js, /stevJs/JSONVisualization/default.js, /stevJs/edit-page.js, cohortexDocson/lib/jquery.js]
 ---
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stevJs/JSONVisualization/default.css">
-
-<script type="text/javascript" src="{{ site.baseurl }}/stevJs/JSONVisualization/yuiloader-dom-event.js"></script>
-
-<script type="text/javascript" src="{{ site.baseurl }}/stevJs/JSONVisualization/json-min.js"></script>
-
-<script type="text/javascript" src="{{ site.baseurl }}/stevJs/JSONVisualization/default.js"></script>
+<script>
+    var studyURL = "https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/{{ page.studyPath }}";
+    var fileLoaded;
+    var fileContent;
+    $.getJSON(studyURL, function(json) {
+        fileLoaded = json;
+        var parts = fileLoaded.split('---');
+        if(parts.length == 3){
+            fileContent = parts[2];
+		} else {
+			fileContent = parts[0];
+            Stevenson.log.warn('No YAML header found on study file');
+		}
+        
+    });
+</script>
 
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -93,26 +104,7 @@ title: Study Page
     VIS.data.size.innerHTML="";
 		
     //var input= {{ content | strip_html }}; //JSON.parse('');
-	var input;
-    var studyURL = "https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/{{ page.studyPath }}";
-    var json = (function () {
-    var json = null;
-    $.ajax({
-        'async': false,
-        'global': false,
-        'url': studyURL,
-        'dataType': "json",
-        'success': function (data) {
-            json = data;
-        }
-    });
-    return json;
-})();
-    input = json;
-    
-    //$.getJSON(studyURL, function(json) {
-    //  input = json;
-    //});
+	var input = fileContent;
     
     var jsonRendered = HTML.display(input,0);
     $("jsonOutput").innerHTML=jsonRendered;
