- Test on GitHub

--- a/docs/_layouts/cohortexStudy.html
+++ b/docs/_layouts/cohortexStudy.html
@@ -1,7 +1,7 @@
 ---
 layout: stevDefault
 title: Study Page
-scripts: [/stevJs/JSONVisualization/yuiloader-dom-event.js, /stevJs/JSONVisualization/json-min.js, /stevJs/JSONVisualization/default.js, /stevJs/edit-page.js, cohortexDocson/lib/jquery.js]
+scripts: [cohortexJs/cohortexStudyPost.js, stevJs/JSONVisualization/yuiloader-dom-event.js, stevJs/JSONVisualization/json-min.js, stevJs/JSONVisualization/default.js, stevJs/edit-page.js, cohortexDocson/lib/jquery.js]
 ---
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stevJs/JSONVisualization/default.css">
 <script>
