--- a/docs/_layouts/cohortexStudyDefault.html
+++ b/docs/_layouts/cohortexStudyDefault.html
@@ -58,13 +58,18 @@
 				</div>
 			</div>
 		</div>
+        
+		<div class="container-fluid">
+			{{content}}
+ 			<hr/>
+       </div>
+        
 		<div class="container-fluid">
 			<div class="row">
 				<div class="span12">
 					<div id="message-container"></div>
 				</div>
 			</div>
-			{{content}}
 			<hr/>
 			<footer>
 				<p>CohortEx Parameters Editor: Based on <a href="StevensonCMS">StevensonCMS</a> from <a href="https://www.danklco.com/">Daniel Klco</a>- Apache License 2.0</p>
