- Maybe it works

--- a/docs/_layouts/cohortexStudy.html
+++ b/docs/_layouts/cohortexStudy.html
@@ -8,7 +8,7 @@ title: Study Page
 <h3>{{ page.summary }}</h3>
 
 <div id="lnks">
-  <a href="javascript:Stevenson.ext.showJSONDoc(null, true)">view json datasource</a>
+  <a href="javascript:doc.body.className='show-json'">view json datasource</a>
   <b>from original url:</b>
   <a href="http://northwind.servicestack.net/customers/ALFKI?">http://northwind.servicestack.net/customers/ALFKI?</a>
 </div>
