--- a/docs/_layouts/cohortexStudy.html
+++ b/docs/_layouts/cohortexStudy.html
@@ -8,7 +8,7 @@ title: Study Page
 <h3>{{ page.summary }}</h3>
 
 <div id="lnks">
-  <a href="javascript:doc.body.className='show-json'">view json datasource</a>
+  <a href="javascript:document.body.className='show-json'">view json datasource</a>
   <b>from original url:</b>
   <a href="http://northwind.servicestack.net/customers/ALFKI?">http://northwind.servicestack.net/customers/ALFKI?</a>
 </div>
@@ -18,7 +18,7 @@ title: Study Page
   <div id="show-json">
     <h3>This reports json data source</h3>
     <textarea></textarea>
-    <button onclick="doc.body.className=null;">Close Window</button>
+    <button onclick="document.body.className=null;">Close Window</button>
   </div>
   
   <div id="content"></div>
