- Last one worked. Now stetics.

--- a/docs/_layouts/cohortexStudy.html
+++ b/docs/_layouts/cohortexStudy.html
@@ -10,7 +10,7 @@ title: Study Page
 <div id="lnks">
   <a href="javascript:Stevenson.ext.showJSONDoc(null, true)">view json datasource</a>
   <b>from original url:</b>
-  <a href="http://northwind.servicestack.net/customers/ALFKI?">http://northwind.servicestack.net/customers/ALFKI?</a>
+  <a href="https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/{{ page.studyPath }}">https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/{{ page.studyPath }}</a>
 </div>
 
 <div id="body">
@@ -27,9 +27,6 @@ title: Study Page
 
 <script>    !window.JSON && document.write(unescape('%3Cscript src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"%3E%3C/script%3E'))</script>
 
-<div id="lnks">
-<h1 style="font-size: 108%;"> Parameters Schema: {{ page.schema }} </h1>
-</div>
 <script type="text/javascript" >    
     var dataSchema="https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/schemas/{{ page.schema }}.json";
     var docsonFrame = "{{ site.baseurl }}/cohortexDocson/docson_frame.html";
@@ -52,6 +49,9 @@ title: Study Page
     }
     window.addEventListener("message", receiveMessage, false);
 </script>
+<div id="lnks">
+<h1 style="font-size: 108%;"> Parameters Schema: {{ page.schema }} </h1>
+</div>
 <span class="meta">
     <small>By {{ site.author }} &copy; {{page.date | date: "%Y"}}</small>
 </span>
