- Make text fit inside the div

--- a/docs/_layouts/cohortexStudy.html
+++ b/docs/_layouts/cohortexStudy.html
@@ -13,7 +13,7 @@ title: Study Page
   <a href="https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/{{ page.studyPath }}">https://raw.githubusercontent.com/{{ site.github.repository_nwo }}/master/{{ page.studyPath }}</a>
 </div>
 
-<div id="body">
+<div id="body" style="overflow: scroll">
   
   <div id="show-json">
     <h3>This reports json data source</h3>
