--- a/docs/_layouts/stevDefault.html
+++ b/docs/_layouts/stevDefault.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/stevCss/bootstrap.min.css" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/stevCss/bootstrap-responsive.min.css" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/stevCss/dataTables.bootstrap.css" />
-		{% for style in page.styles %}<link rel="stylesheet" href="{{ style }}" />{% endfor %} 
+		{% for style in page.styles %}<link rel="stylesheet" href="{{ site.baseurl }}{{ style }}" />{% endfor %} 
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/stevCss/app.css" />
 		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
