--- a/docs/_layouts/stevDefault.html
+++ b/docs/_layouts/stevDefault.html
@@ -33,7 +33,7 @@
 		</script>
 	</head>
 	<body>
-		{% include mainMenuBar.html %}
+		{% include {{page.mainMenu}}.html %}
 		<div class="container-fluid">
 			<div class="row">
 				<div class="span12">
