Revert "try include relative"
This reverts commit a84d462a8a7358544807b82c381029dc1b0e11c1.

--- a/docs/_layouts/stevDefault.html
+++ b/docs/_layouts/stevDefault.html
@@ -33,7 +33,7 @@
 		</script>
 	</head>
 	<body>
-		{% include_relative mainMenuBar.html %}
+		{% include {{ page.mainMenu }} %}
 		<div class="container-fluid">
 			<div class="row">
 				<div class="span12">
