- Set cohortexCms as destination upon login - Change footer information

--- a/docs/_layouts/stevDefault.html
+++ b/docs/_layouts/stevDefault.html
@@ -52,7 +52,7 @@
 			{{content}}
 			<hr/>
 			<footer>
-				<p>CohortEx Parameters Editor: Based on <a href="StevensonCMS">StevensonCMS</a> from <a href="https://www.danklco.com/">Daniel Klco</a>- Apache License 2.0</p>
+				<p>CohortEx Parameters Editor: Based on <a href="StevensonCMS">StevensonCMS</a> - Apache License 2.0</p>
 			</footer>
 		</div>
 		{% include stevLogin.html %}
