--- a/docs/_includes/stevLogin.html
+++ b/docs/_includes/stevLogin.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="modal-body">
 		<p>
-			In order to use CohortEx, you must first authenticate with your <a href="https://github.com">GitHub</a>.
+			In order to use CohortEx, you must first authenticate with your <a href="https://github.com">GitHub</a> account.
 		</p>
 		<p class="error alert alert-error" style="display:none">
 		</p>
@@ -43,7 +43,7 @@
 				success: function(user){
 					$('#login input').removeAttr("disabled");
 					$('#login-modal').modal('hide');
-					window.location = Stevenson.Account.siteBaseURL + '/cms';
+					window.location = Stevenson.Account.siteBaseURL + '/cohortexCms';
 				}
 			});
 			return false;
