- Be more intuitive with menus - missed file

--- a/docs/_layouts/stevDefault.html
+++ b/docs/_layouts/stevDefault.html
@@ -40,6 +40,10 @@
 				{% include cmsMenuBar.html %}
 			{% when 'mainMenuBar' %}
 				{% include mainMenuBar.html %}
+			{% when 'filesStudiesMenuBar' %}
+				{% include filesStudiesMenuBar.html %}
+			{% when 'filesPostsMenuBar' %}
+				{% include filesPostsMenuBar.html %}
 			{% else %}
 				{% include mainMenuBar.html %}
 		{% endcase %}
