- Test jQuery last version

--- a/docs/_layouts/stevDefault.html
+++ b/docs/_layouts/stevDefault.html
@@ -15,9 +15,9 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<!-- script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script -->
         <!-- script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script -->
-        <!-- script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="{{ site.baseurl }}/stevJs/bootstrap.min.js"></script>
 		<script src="{{ site.baseurl }}/stevJs/jquery.mustache.js"></script>
 		<script src="{{ site.baseurl }}/stevJs/jquery.dataTables.js"></script>
